修改标题或目录

--- a/_posts/2019-05-05-keyboard.md
+++ b/_posts/2019-05-05-keyboard.md
@@ -1,6 +1,6 @@
 ---
 layout: post 
-title: "ubuntu环境下插入外置键盘禁用笔记本键盘"
+title: "linux插入外置键盘禁用笔记本键盘"
 thumb: /img/in-post/wiki/thumb.jpg
 category: wiki
 tags:  "ubuntu 键盘 blog"
