--- a/_posts/2019-05-05-keyboard.md
+++ b/_posts/2019-05-05-keyboard.md
@@ -1,7 +1,7 @@
 ---
 layout: post 
 title: "linux插入外置键盘禁用笔记本键盘"
-thumb: /img/in-post/wiki/thumb.jpg
+thumb: /img/in-post/thumbs/linux.png
 category: wiki
 tags:  "ubuntu 键盘 blog"
 ---
