修改相关格式

--- a/_posts/2019-05-05-keyboard.md
+++ b/_posts/2019-05-05-keyboard.md
@@ -27,60 +27,56 @@ xinput float是用来禁用设备的，在命令行输入xinput float [设备名
 用xinput list命令查看当前是否存在外置键盘，如果存在则将内置键盘float起来，如果不存在，则将内置键盘reattach起来就可以了。该命令要重复不断执行，则可以使用一个进程进行维护，可以用sleep函数间隙性扫描。
 
 # 代码实现
-是用Python实现这个功能的，代码如下[[1]][1]
+是用Python实现这个功能的，代码如下
+```
+#!/usr/bin/python
+__author__ = 'znfang'
 
+import re
+import subprocess
+import time
+import signal
 
-    #!/usr/bin/python
-    __author__ = 'znfang'
+kbid = re.compile('(?<=id=)\d+', re.I)
+masterid = re.compile('\d+(?=\)\])', re.I)
 
-    import re
-    import subprocess
-    import time
-    import signal
+KB_ID = -1
+MASTER_ID = -1
 
-    kbid = re.compile('(?<=id=)\d+', re.I)
-    masterid = re.compile('\d+(?=\)\])', re.I)
+def signal_handler(signal, frame):
+    subprocess.getoutput('xinput reattach ' + str(KB_ID) + ' ' + str(MASTER_ID))
+    exit()
 
-    KB_ID = -1
-    MASTER_ID = -1
+signal.signal(signal.SIGINT, signal_handler)
 
-    def signal_handler(signal, frame):
+def getStatus():
+    global KB_ID, MASTER_ID
+    output_master = subprocess.getoutput('xinput list|grep "AT Translated"')
+    output_ikb = subprocess.getoutput('xinput list|grep "Technology Poker"|tail -n1')
+    masterOk = re.match('.*slave  keyboard.*', output_master) is not None
+    masterDis = re.match('.*floating slave.*', output_master) is not None
+    ikbOK = re.match('.*slave  keyboard.*', output_ikb) is not None
+    ikbNo = len(output_ikb) == 0
+
+    if masterOk and ikbOK:
+        s = re.search(kbid_pattern, output_in)KB_ID = s.group(0)
+        s = re.search(masterid_pattern, output_in)
+        MASTER_ID = s.group(0)
+        print('xinput float ' + str(KB_ID))
+        subprocess.getoutput('xinput float ' + str(KB_ID))
+        return 1
+    elif masterOk and ikbNo:
+        return 0
+    elif masterDis and ikbOK:
+        return 2
+    elif masterDis and ikbNo:
+        print('xinput reattach ' + str(KB_ID) + ' ' + str(MASTER_ID))
         subprocess.getoutput('xinput reattach ' + str(KB_ID) + ' ' + str(MASTER_ID))
-        exit()
-
-    signal.signal(signal.SIGINT, signal_handler)
-
-    def getStatus():
-        global KB_ID, MASTER_ID
-        output_master = subprocess.getoutput('xinput list|grep "AT Translated"')
-        output_ikb = subprocess.getoutput('xinput list|grep "Technology Poker"|tail -n1')
-        masterOk = re.match('.*slave  keyboard.*', output_master) is not None
-        masterDis = re.match('.*floating slave.*', output_master) is not None
-        ikbOK = re.match('.*slave  keyboard.*', output_ikb) is not None
-        ikbNo = len(output_ikb) == 0
-
-        if masterOk and ikbOK:
-            s = re.search(kbid_pattern, output_in)KB_ID = s.group(0)
-            s = re.search(masterid_pattern, output_in)
-            MASTER_ID = s.group(0)
-            print('xinput float ' + str(KB_ID))
-            subprocess.getoutput('xinput float ' + str(KB_ID))
-            return 1
-        elif masterOk and ikbNo:
-            return 0
-        elif masterDis and ikbOK:
-            return 2
-        elif masterDis and ikbNo:
-            print('xinput reattach ' + str(KB_ID) + ' ' + str(MASTER_ID))
-            subprocess.getoutput('xinput reattach ' + str(KB_ID) + ' ' + str(MASTER_ID))
-            return 3
+        return 3
 
 
-    if __name__ == '__main__':
-        while True:
-            status = getStatus()
-            time.sleep(2)
-
-
-# 参考资料
-[1]: https://github.com/Chunlin-Li/Chunlin-Li.github.io/blob/master/blogs/linux/disable-keyboard.md "ubuntu 下禁用笔记本自带键盘"
+if __name__ == '__main__':
+    while True:
+        status = getStatus()
+        time.sleep(2)
+```
